--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/systematic.css">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="img/logomain-removebg-preview.png">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -38,51 +38,54 @@
 <body>
     <div id="preloader"></div>
     <!-- header-start -->
-<header>
-        <div class="menu-area99" id="head1">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-sm-12 col-12 hide-xs">
-                      <h3 class="title-m ">Tom and Birdy</h3>
-                    </div>
-                    <div class="col-lg-7 offset-lg-0 col-md-8 offset-md-2 col-sm-12 offset-sm-0 col-12">
-                        <div class="menu">
-                            <nav id="mobile_menu_active" style="display: block;">
-                                <ul style="padding-right: 169px;padding-top: 10px;">
-                                    <li class="active"><a href="index.html">Home</a>
-                                    </li>
-                                    <li><a href="about us.html">About Us</a></li>
-                                    <li><a href="products.html">Products</a>
-                                        <ul class="drop">
-                                            <li><a href="products.html"></a>
-                                                    <li><a href="Pet-Pro-Canine.html">Dogs</a></li>
-                                                    <li><a href="Pet-Pro-Feline.html">Cats</a></li>
-                                                    <li><a href="Birds-Cure.html">Birds</a></li>
-                                            </li>    
-                                        </ul>
-                                    </li>
-                                    <li class="mega"><a class="disable" href="Consultationform.html">Contact Us</a>
-                                    </li>      
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-sm-12 col-12 hide-xs">
-                        <div class="search-consultant">
-                            <div class="sc-search">
-                                
-                                <!-- search-modal-start -->
-                                <!-- search-modal-end -->
-                            </div>
-                            <div class="sc-consultant">
-                                <a class="link" href="Consultationform.html">Involve with us</a>
-                            </div>
-                         </div>
-                    </div>
-                    </div>
-                </div>
-            </div>
-    </header>
+    <div class="fixed-top">
+    <nav class="navbar navbar-expand-sm custom-top-nav">
+        <div class="container">
+        <a class="navbar-brand" href="#"><img src="img/logomain-removebg-preview.png"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" >
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active mb-0">
+              <a class="nav-link" href="#">Involve With Us <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item mb-0">
+              <a class="nav-link" href="#">Get In Touch</a>
+            </li>
+          </ul>
+        </div>
+    </div>
+      </nav>
+      <nav class="navbar navbar-expand-sm custom-top-nav-secondary">
+        <div class="container">
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active mb-0">
+              <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item mb-0">
+              <a class="nav-link" href="#">ABOUT US</a>
+            </li>
+            <li class="nav-item dropdown mb-0">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                OUR PRODUCTS
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Dogs</a>
+                <a class="dropdown-item" href="#">Cats</a>
+                <a class="dropdown-item" href="#">Birds</a>
+              </div>
+            </li>
+            <li class="nav-item mb-0">
+              <a class="nav-link cart" href="#"><img src="img/supermarket.png" width="20px">HOW TO GET</a>
+            </li>
+          </ul>
+        </div>
+    </div>
+      </nav>
+    </div>
     <!-- header-end -->
     <!-- slider-area-start -->
     <div class="slider-area">
