--- a/index.html
+++ b/index.html
@@ -65,19 +65,20 @@
             <li class="nav-item active mb-0">
               <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item dropdown mb-0">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  OUR PRODUCTS
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Dogs</a>
+                  <a class="dropdown-item" href="#">Cats</a>
+                  <a class="dropdown-item" href="#">Birds</a>
+                </div>
+              </li>
             <li class="nav-item mb-0">
               <a class="nav-link" href="#">ABOUT US</a>
             </li>
-            <li class="nav-item dropdown mb-0">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                OUR PRODUCTS
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Dogs</a>
-                <a class="dropdown-item" href="#">Cats</a>
-                <a class="dropdown-item" href="#">Birds</a>
-              </div>
-            </li>
+            
             <li class="nav-item mb-0">
               <a class="nav-link cart" href="#"><img src="img/supermarket.png" width="20px">HOW TO GET</a>
             </li>
@@ -745,7 +746,7 @@ their counterparts in wild
                                     <img src="img/footer-final.png" alt style="height: 200px;">
                                     <img src="img/happy-petting.png" alt style="height: 200px;">
                                 </div>
-                                <h1 style="color: #ffffff">Tom and Birdy</h1>
+                                <h1>Tom and Birdy</h1>
                                 <p class="text">petting possible.</p>
                                 <div class="address">
                                     <h5><span><i class="fas fa-map-marker-alt"></i></span> Address:</h5>
@@ -763,10 +764,10 @@ their counterparts in wild
                             <div class="fw-categories footer-widget">
                                 <h4 class="title">Categories</h4>
                                 <ul class="list">
-                                    <li><a href="index.html"><span><i class="fas fa-long-arrow-alt-right"></i></span> Home</a></li>
-                                    <li><a href="about%20us.html"><span><i class="fas fa-long-arrow-alt-right"></i></span> About us</a></li>
-                                    <li><a href="products.html"><span><i class="fas fa-long-arrow-alt-right"></i></span> Products</a></li>
-                                    <li><a href="Consultationform.html"><span><i class="fas fa-long-arrow-alt-right"></i></span> Contact us</a></li>
+                                    <li><a href="index.html"> Home</a></li>
+                                    <li><a href="about%20us.html"> About us</a></li>
+                                    <li><a href="products.html"> Products</a></li>
+                                    <li><a href="Consultationform.html"> Contact us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -806,7 +807,7 @@ their counterparts in wild
                             <div class="fw-categories footer-widget">
                                 <h4 class="title">Get in touch with us</h4>
                                 <ul class="list">
-                                    <li><a href="Consultationform.html"><span><i class="fas fa-long-arrow-alt-right"></i></span> Click here</a></li>
+                                    <li><a href="Consultationform.html"> Click here</a></li>
                                 </ul>
                             </div>
                         </div>
